--- a/package.xml
+++ b/package.xml
@@ -8,12 +8,17 @@
   <author email="garciaju@uji.es">Juan Carlos Garcia</author>
   <url>https://github.com/jcgarsan/uial</url>
 
+  <build_depend>message_generation</build_depend>
+  <run_depend>message_runtime</run_depend>
+
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend>nodelet</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
 
+  <run_depend>nodelet</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
