--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate services in the 'srv' folder
 add_service_files(
 	FILES
-	hrov_control_std_msg.srv
+	HrovControlStdMsg.srv
 )
 
 ## Generate actions in the 'action' folder
