--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ find_package(catkin REQUIRED COMPONENTS
 	roscpp
 	rospy
 	std_msgs
+	geometry_msgs
 	message_generation
 )
 
@@ -62,6 +63,7 @@ add_service_files(
 generate_messages(
 	DEPENDENCIES
 	std_msgs
+	geometry_msgs
 )
 
 ###################################
@@ -80,6 +82,7 @@ catkin_package(
 	roscpp
 	rospy
 	std_msgs
+	geometry_msgs
 #  DEPENDS system_lib
 )
 
